<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BoxsetterActivity"
    >
    <item android:id="@+id/action_cast"
        android:icon="@drawable/ic_action_cast"
        android:title="@string/action_cast"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_download"
        android:title="@string/action_download"
        android:visible="false"
        app:showAsAction="never" />
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:visible="false"
        app:showAsAction="never" />
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item android:id="@+id/action_update"
        android:title="@string/action_update"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
